ajuste en el documentacion del endpoint de guardar suscriptores
